; ModuleID = '/home/carl/AnghaBench/the_silver_searcher/src/extr_util.c_realloc_matches.c'
source_filename = "/home/carl/AnghaBench/the_silver_searcher/src/extr_util.c_realloc_matches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @realloc_matches(i32** %0, i64* %1, i64 %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i32** %0, i32*** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load i64*, i64** %5, align 8
  %9 = load i64, i64* %8, align 8
  %10 = icmp ult i64 %7, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %31

12:                                               ; preds = %3
  %13 = load i32**, i32*** %4, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load i64*, i64** %5, align 8
  %18 = load i64, i64* %17, align 8
  %19 = mul i64 %18, 2
  br label %21

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20, %16
  %22 = phi i64 [ %19, %16 ], [ 100, %20 ]
  %23 = load i64*, i64** %5, align 8
  store i64 %22, i64* %23, align 8
  %24 = load i32**, i32*** %4, align 8
  %25 = load i32*, i32** %24, align 8
  %26 = load i64*, i64** %5, align 8
  %27 = load i64, i64* %26, align 8
  %28 = mul i64 %27, 4
  %29 = call i32* @ag_realloc(i32* %25, i64 %28)
  %30 = load i32**, i32*** %4, align 8
  store i32* %29, i32** %30, align 8
  br label %31

31:                                               ; preds = %21, %11
  ret void
}

declare dso_local i32* @ag_realloc(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
